# MECHelangelo

./: .gitignore  README.md
PiBorg_examples/PiBorg_examples/: install.sh  runTbJoy.sh  tbExternalLedWave.py  tbGui.py  tbJoystick.py  tbLedGui.py  tbLedWave.py  tbReadBattery.py  tbSequence.py  tbSetBatteryLimits.py  tbStepper.py  tbStepperSeq.py  teleop_keyboard_thunderborg.py
PiBorg_examples/__MACOSX/: ._PiBorg_examples
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mechelangelo_arm_control/share/mechelangelo_arm_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_base_hardware/share/mechelangelo_base_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_base_sim/share/mechelangelo_base_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_behaviour/share/mechelangelo_behaviour/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_bringup/share/mechelangelo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_cartographer/share/mechelangelo_cartographer/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_description/share/mechelangelo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechelangelo_description/share/mechelangelo_description/cmake/: mechelangelo_descriptionConfig-version.cmake  mechelangelo_descriptionConfig.cmake
install/mechelangelo_description/share/mechelangelo_description/environment/: ament_prefix_path.dsv  path.dsv
install/mechelangelo_description/share/mechelangelo_description/meshes/base/: base.STL
install/mechelangelo_description/share/mechelangelo_description/meshes/sensors/: astra.dae  lds.stl  r200.dae
install/mechelangelo_description/share/mechelangelo_description/meshes/wheels/: wheel.STL  wheel.dae
install/mechelangelo_description/share/mechelangelo_description/urdf/: mechelangelo_arm.urdf  mechelangelo_base.urdf
install/mechelangelo_description/share/mechelangelo_description/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mechelangelo_description/share/mechelangelo_description/urdf/log/: latest_build
install/mechelangelo_gazebo/share/mechelangelo_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
install/mechelangelo_teleop/share/mechelangelo_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/mechelangelo_arm_control/: setup.cfg  setup.py
src/mechelangelo_base_driver/mechelangelo_base_driver/: base_driver.py
src/mechelangelo_base_hardware/: CMakeLists.txt  package.xml  setup.py
src/mechelangelo_base_hardware/config/: base_driver.yaml
src/mechelangelo_base_hardware/mechelangelo_base_hardware/: __init__.py
src/mechelangelo_base_sim/: CMakeLists.txt
src/mechelangelo_behaviour/: CMakeLists.txt  package.xml
src/mechelangelo_behaviour/src/: behaviour.cpp  behaviour.hpp
src/mechelangelo_bringup/: CMakeLists.txt  package.xml
src/mechelangelo_bringup/launch/: Gallery_Test2.launch.py  robot.launch.py  sim.launch.py
src/mechelangelo_cartographer/: CMakeLists.txt
src/mechelangelo_description/: CMakeLists.txt  package.xml
src/mechelangelo_description/urdf/: mechelangelo_arm.urdf  mechelangelo_base.urdf  mechelangelo_dual_arms.urdf
src/mechelangelo_gazebo/: CMakeLists.txt  package.xml
src/mechelangelo_gazebo/launch/: empty_gallery.launch.py  environment.launch.py  environment_arm.launch.py  gallery.launch.py  mechelangelo.launch.py
src/mechelangelo_gazebo/models/empty_gallery_floor/: model.config  model.sdf
src/mechelangelo_gazebo/models/empty_gallery_floor/Mesh/: empty_gallery_floor.STL  empty_gallery_floor.dae
src/mechelangelo_gazebo/models/empty_gallery_walls/: model.sdf
src/mechelangelo_gazebo/models/empty_gallery_walls/Mesh/: empty_gallery_walls.STL  empty_gallery_walls.dae
src/mechelangelo_gazebo/models/mechelangelo/: model.sdf
src/mechelangelo_gazebo/models/mechelangelo_arm/: arm.sdf
src/mechelangelo_gazebo/models/mechelangelo_dual_arms/: model.config  model.sdf
src/mechelangelo_gazebo/worlds/: Gallery.world  Gallery_Empty_Room.world
src/mechelangelo_navigation/: CMakeLists.txt  package.xml
src/mechelangelo_navigation2/: CMakeLists.txt
src/mechelangelo_navigation2/launch/: navigation2.launch.py
src/mechelangelo_perception/: setup.cfg  setup.py
src/mechelangelo_teleop/: setup.cfg  setup.py
src/mechelangelo_teleop/mechelangelo_teleop/: teleop_keyboard.py  teleop_keyboard_real.py
(+124 files in other folders)
