<?xml version="1.0"?>
<package format="3">
  <name>mechelangelo_base_driver</name>
  <version>0.0.1</version>
  <description>MECHelangelo real base driver</description>

  <maintainer email="andrewcoorey13@gmail.com">Andy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-gpiozero</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>