<?xml version="1.0"?>
<package format="3">
  <name>mechelangelo_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for MECHelangelo</description>

  <maintainer email="andrewcoorey13@gmail.com">Andrew Coorey</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>