<?xml version="1.0"?>
<package format="3">
  <name>mechelangelo_description</name>
  <version>0.0.0</version>
  <description>Robot description package for Mechelangelo</description>
  <maintainer email="andrewcoorey13@gmail.com">Andrew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>