<?xml version="1.0"?>
<package format="3">
  <name>mechelangelo_teleop</name>
  <version>0.0.0</version>
  <description>Keyboard teleoperation for MECHelangelo</description>

  <maintainer email="andrewcoorey13@gmail.com">Andrew Coorey</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
